# vec-library

./: README.md  __init__.py  core.py  parser.py  pyproject.toml
docs/: vec_documentation.md
docs/spec/: vec_specification.md
pyVectors.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_vec.py
vec/: __init__.py  core.py  parser.py
vec_library.egg-info/: PKG-INFO  SOURCES.txt
