[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vec-library"
version = "1.0.0"
description = "A Python library for representing and manipulating complex vectors (phasors)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["vector", "phasor", "complex", "electrical engineering", "math"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/yourusername/vec-library"
Issues   = "https://github.com/yourusername/vec-library/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vec*"]
